# SqlLumen

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  mcp_testing.md  package.json  playwright.config.mjs  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: tauri-release-body.md
.github/workflows/: release.yml
e2e/: ai-assistant.spec.ts  app-launch.spec.ts  helpers.ts  object-editor.spec.ts  query-autocomplete.spec.ts  query-running-indicator.spec.ts  result-grid-sort-icons.spec.ts  screenshots.spec.ts  table-data-grid-editing.spec.ts  table-designer-dropdown.spec.ts  theme-toggle.spec.ts
scripts/: bump-tauri-version.mjs  ensure-playwright-port.mjs  pick-dev-port.mjs  playwright-screenshots.mjs  playwright-screenshots.test.ts  setup-worktree.sh  tauri-cli.mjs  tauri-dev.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  coverage-functions.json  nextest.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_connection_timeouts.sql  003_history_favorites.sql  004_fix_history_favorites_schema.sql  005_schema_index.sql  006_schema_index_summary_chunks.sql  007_schema_index_content_redesign.sql  007_schema_index_signatures.sql  008_schema_index_segment_df.sql
src-tauri/permissions/: ai.toml  app_info.toml  connections.toml  export.toml  favorites.toml  frontend_log.toml  history.toml  mysql.toml  object_editor.toml  query.toml  schema.toml  schema_index.toml  session.toml  settings.toml  sql_dump.toml  table_data.toml  table_designer.toml
src-tauri/src/: credentials.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: client.rs  types.rs  url.rs
src-tauri/src/commands/: ai.rs  app_info.rs  connection_groups.rs  connections.rs  export.rs  favorites.rs  frontend_log.rs  history.rs  mod.rs  mysql.rs  object_editor.rs  query.rs  query_history_bridge.rs  schema.rs  schema_index.rs  session.rs  settings.rs  sql_dump.rs  table_data.rs  table_designer.rs
src-tauri/src/db/: connection.rs  connection_groups.rs  connections.rs  favorites.rs  history.rs  migrations.rs  mod.rs  settings.rs
src-tauri/src/export/: csv_writer.rs  json_writer.rs  mod.rs  sql_dump.rs  sql_import.rs  sql_writer.rs  xlsx_writer.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/mysql/: health.rs  mod.rs  multi_result.rs  pool.rs  query_executor.rs  query_log.rs  registry.rs  schema_queries.rs  sql_table_parser.rs  table_data.rs  table_designer.rs
src-tauri/src/schema_index/: builder.rs  embeddings.rs  embeddings_cache.rs  graph.rs  mod.rs  rerank.rs  search.rs  storage.rs  types.rs
src-tauri/tests/: ai_client_integration.rs  ai_commands_integration.rs  ai_url_normalisation_integration.rs  app_data_dir_integration.rs  app_info_integration.rs  app_init_integration.rs  cancel_query_integration.rs  commands_connection_groups_integration.rs  commands_connections_integration.rs  commands_integration.rs  commands_mysql_credentials_integration.rs  commands_query_e2e_integration.rs  commands_query_integration.rs  commands_schema_integration.rs  commands_settings_integration.rs  connections_integration.rs  coverage_boost.rs  db_connection_groups_repository_integration.rs  db_connection_integration.rs  db_connections_repository_integration.rs  db_cross_module_integration.rs  db_integration.rs  db_migrations_integration.rs  db_settings_repository_integration.rs  embeddings_cache_integration.rs  embeddings_parallel_integration.rs  export_integration.rs  favorites_integration.rs  frontend_log_integration.rs  graph_bfs_integration.rs  history_integration.rs  logging_init_integration.rs  logging_integration.rs  multi_query_integration.rs  mysql_health_integration.rs  mysql_integration.rs  object_editor_integration.rs  query_edit_integration.rs  query_history_bridge_integration.rs  query_log_integration.rs  (+22 more)
src-tauri/tests/common/: fake_credentials.rs  log_capture.rs  mock_mysql_server.rs  mod.rs
src/hooks/: use-grid-ag-dimensions.ts  use-grid-dimensions.ts  use-system-theme.ts  useDatabaseEncoding.ts  useFocusTrap.ts  useObjectBrowserActions.tsx  useShortcut.ts
src/lib/: ai-commands.ts  app-info-commands.ts  app-log-commands.ts  col-key-utils.ts  connection-commands.ts  context-menu-events.ts  context-menu-utils.ts  date-utils.ts  elapsed-time.ts  execute-template-builder.ts  export-commands.ts  favorites-commands.ts  filter-utils.ts  foreign-key-utils.ts  format-utils.ts  grid-column-style.ts  history-commands.ts  monaco-worker-setup.ts  object-editor-commands.ts  playwright-ipc-mock.ts  query-commands.ts  query-edit-utils.ts  query-result-column-utils.ts  query-tab-utils.ts  result-cell-utils.ts  schema-commands.ts  schema-ddl-compactor.ts  schema-index-commands.ts  session-restore-commands.ts  sql-dump-commands.ts  sql-syntax-highlighter.tsx  sql-tokenizer.ts  sql-utils.ts  table-data-commands.ts  table-data-save-utils.ts  table-designer-commands.ts  tauri-commands.ts  tree-filter.ts  workspace-layout-events.ts
src/stores/: ai-feedback-store.ts  ai-store.ts  connection-store.ts  favorites-store.ts  history-store.ts  import-dialog-store.ts  object-editor-store.ts  (+11 more)
(+492 files in other folders)
