[package]
name = "mysql-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "mysql_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["dialog"]
dialog = ["dep:tauri-plugin-dialog"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "tls-rustls-ring"] }
keyring = "3"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
