[package]
name = "mysql-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "mysql_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["dialog"]
dialog = ["dep:tauri-plugin-dialog"]
test-utils = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-prevent-default = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = { version = "1", features = ["std"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "tls-rustls-ring", "chrono"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
chrono = "0.4"

# keyring v3 has no default features — without these, the mock backend is used (no OS persistence).
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
tauri-plugin-prevent-default = { version = "4", features = ["platform-windows"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = [
  "linux-native-sync-persistent",
  "sync-secret-service",
  "crypto-rust",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "test-util", "net", "io-util"] }
tauri = { version = "2", features = ["test"] }
opensrv-mysql = "0.7.0"
async-trait = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
